@@ -289,6 +289,9 @@ switch ($sec) {
         if (isset($_POST['cachingoff'])) eaccelerator_caching(false);
         if (isset($_POST['cachingon'])) eaccelerator_caching(true);
 
+        if (isset($_POST['optoff']) && function_exists('eaccelerator_optimizer')) eaccelerator_optimizer(false);
+        if (isset($_POST['opton']) && function_exists('eaccelerator_optimizer')) eaccelerator_optimizer(true);
+
         if (isset($_POST['clear'])) eaccelerator_clear();
         if (isset($_POST['clean'])) eaccelerator_clean();
         if (isset($_POST['purge'])) eaccelerator_purge();
@@ -307,6 +310,10 @@ switch ($sec) {
 <tr>
     <td class="er">Caching enabled</td> 
     <td class="fl"><?php echo $info['cache'] ? '<span style="color:green"><b>yes</b></span>&nbsp;&nbsp;&nbsp;<input type="submit" name="cachingoff" value=" Disable "/>':'<span style="color:red"><b>no</b></span>&nbsp;&nbsp;&nbsp;<input type="submit" name="cachingon" value=" Enable "/>' ?></td>
+</tr>
+<tr>
+    <td class="er">Optimizer enabled</td>
+    <td class="fl"><?php echo $info['optimizer'] ? '<span style="color:green"><b>yes</b></span>&nbsp;&nbsp;&nbsp;<input type="submit" name="optoff" value=" Disable "/>':'<span style="color:red"><b>no</b></span>&nbsp;&nbsp;&nbsp;<input type="submit" name="opton" value=" Enable "/>' ?></td>
 </tr>
 <tr>
     <td class="er">Total memory</td>
