@@ -279,6 +279,7 @@ static int init_mm(TSRMLS_D) {
   eaccelerator_mm_instance->hash_cnt = 0;
   eaccelerator_mm_instance->rem_cnt  = 0;
   eaccelerator_mm_instance->enabled = 1;
+  eaccelerator_mm_instance->optimizer_enabled = 1;
   eaccelerator_mm_instance->removed = NULL;
   eaccelerator_mm_instance->locks = NULL;
   eaccelerator_mm_instance->last_prune = time(NULL);	/* this time() call is harmless since this is init phase */
@@ -1231,6 +1232,10 @@ ZEND_DLEXPORT zend_op_array* eaccelerator_compile_file(zend_file_handle *file_ha
 
     DBG(ea_debug_printf, (EA_TEST_PERFORMANCE, "\t[%d] compile_file: compiling (%ld)\n", getpid(), ea_debug_elapsed_time(&tv_start)));
     
+		if (EAG(optimizer_enabled) && eaccelerator_mm_instance->optimizer_enabled) {
+		  EAG(compiler) = 1;
+		}
+
 	/* try to compile the script */
     ea_bailout = 0;
     zend_try {
@@ -1396,6 +1401,8 @@ PHP_MINFO_FUNCTION(eaccelerator) {
   php_info_print_table_row(2, "Version", EACCELERATOR_VERSION);
   php_info_print_table_row(2, "Caching Enabled", (EAG(enabled) && (eaccelerator_mm_instance != NULL) && 
               eaccelerator_mm_instance->enabled)?"true":"false");
+  php_info_print_table_row(2, "Optimizer Enabled", (EAG(optimizer_enabled) && 
+						  (eaccelerator_mm_instance != NULL) && eaccelerator_mm_instance->optimizer_enabled)?"true":"false");
   if (eaccelerator_mm_instance != NULL) {
     size_t available;
     EACCELERATOR_UNPROTECT();
@@ -1476,6 +1483,7 @@ static PHP_INI_MH(eaccelerator_OnUpdateBool) {
 
 PHP_INI_BEGIN()
 STD_PHP_INI_ENTRY("eaccelerator.enable",         "1", PHP_INI_ALL, OnUpdateBool, enabled, zend_eaccelerator_globals, eaccelerator_globals)
+STD_PHP_INI_ENTRY("eaccelerator.optimizer",      "1", PHP_INI_ALL, OnUpdateBool, optimizer_enabled, zend_eaccelerator_globals, eaccelerator_globals)
 ZEND_INI_ENTRY1("eaccelerator.shm_size",        "0", PHP_INI_SYSTEM, eaccelerator_OnUpdateLong, &ea_shm_size)
 ZEND_INI_ENTRY1("eaccelerator.shm_max",         "0", PHP_INI_SYSTEM, eaccelerator_OnUpdateLong, &ea_shm_max)
 ZEND_INI_ENTRY1("eaccelerator.shm_ttl",         "0", PHP_INI_SYSTEM, eaccelerator_OnUpdateLong, &ea_shm_ttl)
@@ -1654,6 +1662,7 @@ static void eaccelerator_init_globals(zend_eaccelerator_globals *eag)
 	eag->used_entries = NULL;
 	eag->enabled = 1;
 	eag->cache_dir = NULL;
+  eag->optimizer_enabled = 1;
 	eag->compiler = 0;
 	eag->eaccelerator_log_file = '\000';
 	eag->in_request = 0;
@@ -1918,6 +1927,9 @@ function_entry eaccelerator_functions[] = {
   PHP_FE(eaccelerator_purge, NULL)
   PHP_FE(eaccelerator_cached_scripts, NULL)
   PHP_FE(eaccelerator_removed_scripts, NULL)
+#endif
+#ifdef WITH_EACCELERATOR_OPTIMIZER
+  PHP_FE(eaccelerator_optimizer, NULL)
 #endif
 #ifdef WITH_EACCELERATOR_DISASSEMBLER
   PHP_FE(eaccelerator_dasm_file, NULL)
@@ -2196,7 +2208,11 @@ ZEND_DLEXPORT zend_extension zend_extension_entry = {
   NULL,   /* void (*activate)() */
   NULL,   /* void (*deactivate)() */
   NULL,   /* void (*message_handle)(int message, void *arg) */
+#ifdef WITH_EACCELERATOR_OPTIMIZER
+  eaccelerator_optimize,   /* void (*op_array_handler)(zend_op_array *o_a); */
+#else
   NULL,   /* void (*op_array_handler)(zend_op_array *o_a); */
+#endif
   NULL,   /* void (*statement_handler)(zend_op_array *o_a); */
   NULL,   /* void (*fcall_begin_handler)(zend_op_array *o_a); */
   NULL,   /* void (*fcall_end_handler)(zend_op_array *o_a); */
@@ -2221,7 +2237,11 @@ static zend_extension eaccelerator_extension_entry = {
   NULL,   /* void (*activate)() */
   NULL,   /* void (*deactivate)() */
   NULL,   /* void (*message_handle)(int message, void *arg) */
+#ifdef WITH_EACCELERATOR_OPTIMIZER
+  eaccelerator_optimize,   /* void (*op_array_handler)(zend_op_array *o_a); */
+#else
   NULL,   /* void (*op_array_handler)(zend_op_array *o_a); */
+#endif
   NULL,   /* void (*statement_handler)(zend_op_array *o_a); */
   NULL,   /* void (*fcall_begin_handler)(zend_op_array *o_a); */
   NULL,   /* void (*fcall_end_handler)(zend_op_array *o_a); */
